fix alignment of header and blog list

--- a/static/markdown.css
+++ b/static/markdown.css
@@ -56,7 +56,6 @@
   -webkit-text-decoration: solid underline #ffb86c 0.25em;
 }
 
-#markdown h1,
 #markdown h2 {
   margin-top: 2rem;
 }
